[build-system]
requires = ["setuptools>=68", "wheel", "pybind11>=2.12"]
build-backend = "setuptools.build_meta"

[project]
name = "fluxion-runtime"
version = "0.1.0"
description = "Hardware-aware inference runtime for token-level scheduling and KV-cache efficiency"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.8",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "httpx>=0.27"]

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "-q"

[tool.setuptools.packages.find]
include = ["fluxion*"]

